Fixed lyric-clipping bounds in Fullscreen mode

--- a/src/Stylings/Lyrics.scss
+++ b/src/Stylings/Lyrics.scss
@@ -458,8 +458,8 @@
 
 	&.Fullscreen {
 		.RootContainer {
-			top: -4.5cqh;
-			height: 102cqh;
+			top: -4cqh;
+			height: 101.5cqh;
 
 			width: 50cqw;
 
